tests/paczka1/fuzzy1/51893747.err
Error in line 4: A252 A252 76,5
Error in line 7: gq0 S201 91,6
Error in line 24: jkgfcSQkl S288 8,1
Error in line 15: uzKTqeU S716 144,0
Error in line 26: jkgfcSQkl A252 80,9
Error in line 33: Wmu S716 16,9
Error in line 34: 1SarRB1No S716 28,5
Error in line 40: 40DayTQsT S201 98,74
